[package]
name = "surgery"
version = "1.1.1"
edition = "2024"
description = "A simple CLI for Real Debrid "
homepage = "https://github.com/dotzenith/surgery"
repository = "https://github.com/dotzenith/surgery"
license = "MIT"
autobins = false

[[bin]]
name = "srg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["cargo", "derive"] }
nucleo-matcher = "0.3.1"
serde = { version = "1.0.228", features = ["derive"] }
ureq = { version = "3.1.4", features = ["json"] }
url = "2.5.7"

[profile.release]
lto = "thin"
panic = "abort"
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
